Issue #3388221: pass the interval, keyboard, pause, ride, touch, and wrap to the Heroslider component

--- a/templates/views-view--varbase-heroslider.html.twig
+++ b/templates/views-view--varbase-heroslider.html.twig
@@ -23,6 +23,12 @@
     id: id,
     controls: true,
     indicators: true,
-    items: rows[0]['#rows'] ?? []
+    interval: 6000,
+    keyboard: true,
+    pause: "hover",
+    ride: "carousel",
+    touch: true,
+    wrap: true,
+    items: rows[0]['#rows'] ?? [],
   }
 %}
