Issue #3388221: Add Hero Style property and context to the Hero Slider view

--- a/templates/views-view--varbase-heroslider.html.twig
+++ b/templates/views-view--varbase-heroslider.html.twig
@@ -20,6 +20,7 @@
 #}
 {%
   include "varbase_components:heroslider" with {
+    hero_style: view.args[0] ?? 'overlay',
     id: id,
     controls: true,
     indicators: true,
