--- a/templates/views-view--varbase-heroslider.html.twig
+++ b/templates/views-view--varbase-heroslider.html.twig
@@ -20,7 +20,7 @@
 #}
 {%
   include "varbase_components:heroslider" with {
-    hero_style: view.args[0] ?? 'overlay',
+    media_position: view.args[0] ?? 'overlay',
     id: id,
     controls: true,
     indicators: true,
